--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
   </section>
 
   <section id="projects" class="gallery">
-    <div class="gallery-item"><img src="assets/p1.jpg"   /></div>
-    <div class="gallery-item"><img src="assets/p2.jpg"   /></div>
-    <div class="gallery-item"><img src="assets/p3.jpg"   /></div>
-    <div class="gallery-item"><img src="assets/p4.jpg"  /></div>
-    <div class="gallery-item"><img src="assets/p5.jpg"   /></div>
-    <div class="gallery-item"><img src="assets/p6.jpg"  /></div>
-    <div class="gallery-item"><img src="assets/p7.jpg"  /></div>
-    <div class="gallery-item"><img src="assets/p8.jpg"   /></div>
-    <div class="gallery-item"><img src="assets/p9.jpg"   /></div>
-    <div class="gallery-item"><img src="assets/p10.jpg"   /></div>
+    <div class="gallery-item"><img src="assets/p1.jpg" alt="Art 1" /></div>
+    <div class="gallery-item"><img src="assets/p2.jpg" alt="Art 2" /></div>
+    <div class="gallery-item"><img src="assets/p3.jpg" alt="Art 3" /></div>
+    <div class="gallery-item"><img src="assets/p4.jpg" alt="Art 4" /></div>
+    <div class="gallery-item"><img src="assets/p5.jpg" alt="Art 5" /></div>
+    <div class="gallery-item"><img src="assets/p6.jpg" alt="Art 6" /></div>
+    <div class="gallery-item"><img src="assets/p7.jpg" alt="Art 7" /></div>
+    <div class="gallery-item"><img src="assets/p8.jpg" alt="Art 8" /></div>
+    <div class="gallery-item"><img src="assets/p9.jpg" alt="Art 9" /></div>
+    <div class="gallery-item"><img src="assets/p10.jpg" alt="Art 10" /></div>
   </section>
 
   <div id="modal" class="modal">
@@ -53,10 +53,11 @@
       <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
 
-      <!-- FormSubmit hidden inputs -->
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_subject" value="New message from The Opal Snowdrop portfolio!">
       <input type="hidden" name="_template" value="box">
+      <input type="hidden" name="_autoresponse" value="Thank you for your message! I will get back to you soon.">
+      <input type="hidden" name="_next" value="https://yourdomain.com/thankyou.html">
 
       <button type="submit">Send Message</button>
     </form>
