--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <div class="gallery-item"><img src="assets/p4.jpg" alt="Art 4" /></div>
     <div class="gallery-item"><img src="assets/p5.jpg" alt="Art 5" /></div>
     <div class="gallery-item"><img src="assets/p6.jpg" alt="Art 6" /></div>
-    <div class="gallery-item"><img src="assets/p7.jpg" alt="Art 7" /></div>
-    <div class="gallery-item"><img src="assets/p8.jpg" alt="Art 8" /></div>
+    <div class="gallery-item"><img src="assets/p7.JPG" alt="Art 7" /></div>
+    <div class="gallery-item"><img src="assets/p8.JPG" alt="Art 8" /></div>
     <div class="gallery-item"><img src="assets/p9.jpg" alt="Art 9" /></div>
-    <div class="gallery-item"><img src="assets/p10.jpg" alt="Art 10" /></div>
+    <div class="gallery-item"><img src="assets/p10.JPG" alt="Art 10" /></div>
   </section>
 
   <div id="modal" class="modal">
