--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <nav>
       <a href="#projects">Gallery</a>
+      <a href="#videos">Videos</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -38,6 +39,14 @@
     <div class="gallery-item"><img src="assets/p8.JPG" alt="Art 8" /></div>
     <div class="gallery-item"><img src="assets/p9.jpg" alt="Art 9" /></div>
     <div class="gallery-item"><img src="assets/p10.JPG" alt="Art 10" /></div>
+  </section>
+
+  <section id="videos" class="gallery">
+    <h2>Featured Videos</h2>
+    <div class="gallery-item"><video controls><source src="assets/video1.mp4" type="video/mp4">Your browser does not support the video tag.</video></div>
+    <div class="gallery-item"><video controls><source src="assets/video2.mp4" type="video/mp4">Your browser does not support the video tag.</video></div>
+    <div class="gallery-item"><video controls><source src="assets/video3.mp4" type="video/mp4">Your browser does not support the video tag.</video></div>
+    <div class="gallery-item"><video controls><source src="assets/video4.mp4" type="video/mp4">Your browser does not support the video tag.</video></div>
   </section>
 
   <div id="modal" class="modal">
