--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <h2>Featured Videos</h2>
     <div class="gallery-item"><video controls><source src="assets/video1.mp4" type="video/mp4"></video></div>
     <div class="gallery-item"><video controls><source src="assets/video2.mp4" type="video/mp4"></video></div>
-    <div class="gallery-item"><video controls><source src="assets/video3.mp4" type="video/mp4">Your browser does not support the video tag.</video></div>
-    <div class="gallery-item"><video controls><source src="assets/video4.mp4" type="video/mp4">Your browser does not support the video tag.</video></div>
+    <div class="gallery-item"><video controls><source src="assets/video3.mp4" type="video/mp4"></video></div>
+    <div class="gallery-item"><video controls><source src="assets/video4.mp4" type="video/mp4"></video></div>
   </section>
 
   <div id="modal" class="modal">
