--- a/index.html
+++ b/index.html
@@ -6,6 +6,96 @@
   <title>The Opal Snowdrop</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      background: #fffaf7;
+      font-family: 'Inter', sans-serif;
+      color: #333;
+      margin: 0;
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 3rem 2rem;
+      background: #f9f9f9;
+    }
+
+    .gallery-item {
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      background: white;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+    }
+
+    .gallery-item:hover {
+      transform: scale(1.05);
+      box-shadow: 0 12px 35px rgba(0, 0, 0, 0.2);
+    }
+
+    .gallery-item img,
+    .gallery-item video {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 12px;
+    }
+
+    .gallery-item video {
+      pointer-events: none;
+    }
+
+    .gallery-item:hover video {
+      pointer-events: auto;
+    }
+
+    .video-section h2 {
+      text-align: center;
+      margin: 2rem auto 1rem;
+      font-size: 2rem;
+      font-family: 'Playfair Display', serif;
+    }
+
+    .contact-form {
+      background: #f1f1f1;
+      padding: 3rem 2rem;
+      text-align: center;
+    }
+
+    .contact-form form {
+      max-width: 600px;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      padding: 1rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+      width: 100%;
+    }
+
+    .contact-form button {
+      background: #333;
+      color: white;
+      padding: 1rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .contact-form button:hover {
+      background: #555;
+    }
+  </style>
 </head>
 <body>
 
@@ -41,11 +131,12 @@
     <div class="gallery-item"><img src="assets/p10.JPG" alt="Art 10" /></div>
   </section>
 
-  <section id="videos" class="gallery">
+  <section id="videos" class="gallery video-section">
     <h2>Featured Videos</h2>
-    <div class="gallery-item"><video controls><source src="assets/Video7.mp4" type="video/mp4"></video></div>
-    <div class="gallery-item"><video controls><source src="assets/Video8.mp4" type="video/mp4"></video></div>
-    <div class="gallery-item"><video controls><source src="assets/Video9.mp4" type="video/mp4"></video></div>
+    <div class="gallery-item"><video muted loop><source src="assets/video1.mp4" type="video/mp4"></video></div>
+    <div class="gallery-item"><video muted loop><source src="assets/video2.mp4" type="video/mp4"></video></div>
+    <div class="gallery-item"><video muted loop><source src="assets/video3.mp4" type="video/mp4"></video></div>
+    <div class="gallery-item"><video muted loop><source src="assets/video4.mp4" type="video/mp4"></video></div>
   </section>
 
   <div id="modal" class="modal">
@@ -76,5 +167,11 @@
   </footer>
 
   <script src="script.js"></script>
+  <script>
+    document.querySelectorAll('video').forEach(video => {
+      video.addEventListener('mouseenter', () => video.play());
+      video.addEventListener('mouseleave', () => video.pause());
+    });
+  </script>
 </body>
 </html>
