--- a/index.html
+++ b/index.html
@@ -119,24 +119,23 @@
   </section>
 
   <section id="projects" class="gallery">
-    <div class="gallery-item"><img src="assets/p1.jpg" alt="Art 1" /></div>
-    <div class="gallery-item"><img src="assets/p2.jpg" alt="Art 2" /></div>
-    <div class="gallery-item"><img src="assets/p3.jpg" alt="Art 3" /></div>
-    <div class="gallery-item"><img src="assets/p4.jpg" alt="Art 4" /></div>
-    <div class="gallery-item"><img src="assets/p5.jpg" alt="Art 5" /></div>
-    <div class="gallery-item"><img src="assets/p6.jpg" alt="Art 6" /></div>
-    <div class="gallery-item"><img src="assets/p7.JPG" alt="Art 7" /></div>
-    <div class="gallery-item"><img src="assets/p8.JPG" alt="Art 8" /></div>
-    <div class="gallery-item"><img src="assets/p9.jpg" alt="Art 9" /></div>
-    <div class="gallery-item"><img src="assets/p10.JPG" alt="Art 10" /></div>
+    <div class="gallery-item"><img src="assets/p1.jpg"  /></div>
+    <div class="gallery-item"><img src="assets/p2.jpg"  /></div>
+    <div class="gallery-item"><img src="assets/p3.jpg"  /></div>
+    <div class="gallery-item"><img src="assets/p4.jpg"   /></div>
+    <div class="gallery-item"><img src="assets/p5.jpg"   /></div>
+    <div class="gallery-item"><img src="assets/p6.jpg" /></div>
+    <div class="gallery-item"><img src="assets/p7.JPG"  /></div>
+    <div class="gallery-item"><img src="assets/p8.JPG"   /></div>
+    <div class="gallery-item"><img src="assets/p9.jpg"  /></div>
+    <div class="gallery-item"><img src="assets/p10.JPG"   /></div>
   </section>
 
   <section id="videos" class="gallery video-section">
     <h2>Featured Videos</h2>
-    <div class="gallery-item"><video muted loop><source src="assets/video1.mp4" type="video/mp4"></video></div>
-    <div class="gallery-item"><video muted loop><source src="assets/video2.mp4" type="video/mp4"></video></div>
-    <div class="gallery-item"><video muted loop><source src="assets/video3.mp4" type="video/mp4"></video></div>
-    <div class="gallery-item"><video muted loop><source src="assets/video4.mp4" type="video/mp4"></video></div>
+    <div class="gallery-item"><video muted loop><source src="assets/Video7.mp4" type="video/mp4"></video></div>
+    <div class="gallery-item"><video muted loop><source src="assets/Video8.mp4" type="video/mp4"></video></div>
+    <div class="gallery-item"><video muted loop><source src="assets/Video9.mp4" type="video/mp4"></video></div>
   </section>
 
   <div id="modal" class="modal">
