--- a/index.html
+++ b/index.html
@@ -144,21 +144,21 @@
     <div id="caption"></div>
   </div>
 
-<section id="contact" class="contact-form">
-  <h2>Contact Me</h2>
+<section id="contact">
+  <h2>Contact Us</h2>
   <form action="https://formsubmit.co/theopalsnowdrop@gmail.com" method="POST">
     <input type="text" name="name" placeholder="Your Name" required />
     <input type="email" name="email" placeholder="Your Email" required />
-    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <textarea name="message" placeholder="Your Message" required></textarea>
 
-    <!-- FormSubmit hidden fields -->
+    <!-- Hidden settings for FormSubmit -->
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_subject" value="New message from The Opal Snowdrop portfolio!">
     <input type="hidden" name="_template" value="box">
     <input type="hidden" name="_autoresponse" value="Thank you for your message! I will get back to you soon.">
     <input type="hidden" name="_next" value="thankyou.html">
 
-    <button type="submit">Send Message</button>
+    <button type="submit">Send</button>
   </form>
 </section>
 
