--- a/index.html
+++ b/index.html
@@ -144,23 +144,17 @@
     <div id="caption"></div>
   </div>
 
-<section id="contact">
-  <h2>Contact Us</h2>
-  <form action="https://formsubmit.co/theopalsnowdrop@gmail.com" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <textarea name="message" placeholder="Your Message" required></textarea>
+<form action="https://formsubmit.co/theopalsnowdrop@gmail.com" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="email" name="email" placeholder="Your Email" required />
+  <textarea name="message" placeholder="Your Message" required></textarea>
 
-    <!-- Hidden settings for FormSubmit -->
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_subject" value="New message from The Opal Snowdrop portfolio!">
-    <input type="hidden" name="_template" value="box">
-    <input type="hidden" name="_autoresponse" value="Thank you for your message! I will get back to you soon.">
-    <input type="hidden" name="_next" value="thankyou.html">
+  <!-- Hidden inputs for formsubmit.co -->
+  <input type="hidden" name="_captcha" value="false" />
+  <input type="hidden" name="_next" value="thankyou.html" />
 
-    <button type="submit">Send</button>
-  </form>
-</section>
+  <button type="submit">Send</button>
+</form>
 
   <footer>
     <p>© 2025 <strong>The Opal Snowdrop</strong> • <a href="mailto:theopalsnowdrop@gmail.com">Contact Me</a></p>
