--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@
     <div id="caption"></div>
   </div>
 
-<form action="https://formsubmit.co/theopalsnowdrop@gmail.com" method="POST">
-  <input type="text" name="name" placeholder="Your Name" required />
-  <input type="email" name="email" placeholder="Your Email" required />
-  <textarea name="message" placeholder="Your Message" required></textarea>
-
-  <!-- Hidden inputs for formsubmit.co -->
-  <input type="hidden" name="_captcha" value="false" />
-  <input type="hidden" name="_next" value="thankyou.html" />
-
-  <button type="submit">Send</button>
-</form>
-
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <form action="https://formsubmit.co/theopalsnowdrop@gmail.com" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" placeholder="Your Message" required></textarea>
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="thankyou.html">
+      <button type="submit">Send</button>
+    </form>
+  </section>
   <footer>
     <p>© 2025 <strong>The Opal Snowdrop</strong> • <a href="mailto:theopalsnowdrop@gmail.com">Contact Me</a></p>
   </footer>
