--- a/thankyou.html
+++ b/thankyou.html
@@ -1,38 +1,17 @@
+<!-- thankyou.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thank You - The Opal Snowdrop</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background: #fffaf7;
-      font-family: 'Inter', sans-serif;
-      text-align: center;
-    }
-    .message-box {
-      max-width: 600px;
-      padding: 2rem;
-      background: #f9f9f9;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2rem;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Thank You</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="message-box">
-    <h1>Thank you!</h1>
-    <p>Your message has been sent successfully. I’ll be in touch shortly.</p>
+  <section class="thank-you">
+    <h1>Thank You!</h1>
+    <p>Your message has been successfully sent. I’ll get back to you shortly.</p>
     <a href="index.html">← Back to Home</a>
-  </div>
+  </section>
 </body>
 </html>
