--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
     </div>
   </section>
 
+  <section id="about" style="padding: 3rem 2rem; background-color: #fff;">
+    <h2 style="text-align: center; font-family: 'Playfair Display', serif; font-size: 2rem; margin-bottom: 1rem;">About Us</h2>
+    <p style="max-width: 800px; margin: auto; text-align: center; font-size: 1.1rem; line-height: 1.6;">
+      At <strong>The Opal Snowdrop</strong>, we blend minimalist elegance with artistic storytelling.
+      Each piece we showcase is a reflection of timeless charm, crafted with heart and vision. From curated visuals to expressive media,
+      our mission is to offer a space where creativity breathes and beauty inspires.
+    </p>
+  </section>
+
   <section id="projects" class="gallery">
     <div class="gallery-item"><img src="assets/p1.jpg"  /></div>
     <div class="gallery-item"><img src="assets/p2.jpg"  /></div>
@@ -183,25 +192,25 @@
     <div id="caption"></div>
   </div>
 
-<section id="contact" class="contact-form">
-  <h2>Contact Me</h2>
-  <form id="contactForm" action="https://formsubmit.co/theopalsnowdrop@gmail.com" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+  <section id="contact" class="contact-form">
+    <h2>Contact Me</h2>
+    <form id="contactForm" action="https://formsubmit.co/theopalsnowdrop@gmail.com" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
 
-    <!-- Hidden FormSubmit fields -->
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_subject" value="New message from The Opal Snowdrop portfolio!">
-    <input type="hidden" name="_template" value="box">
+      <!-- Hidden FormSubmit fields -->
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_subject" value="New message from The Opal Snowdrop portfolio!">
+      <input type="hidden" name="_template" value="box">
 
-    <button type="submit">Send Message</button>
-  </form>
-  <p id="formSuccess" style="display:none; color: green; font-weight: bold; margin-top: 1rem;">
-    Thank you! Your message has been sent.
-  </p>
-</section>
+      <button type="submit">Send Message</button>
+    </form>
+    <p id="formSuccess" style="display:none; color: green; font-weight: bold; margin-top: 1rem;">
+      Thank you! Your message has been sent.
+    </p>
   </section>
+
   <footer>
     <p>© 2025 <strong>The Opal Snowdrop</strong> • <a href="mailto:theopalsnowdrop@gmail.com">Contact Me</a></p>
   </footer>
