--- a/index.html
+++ b/index.html
@@ -182,7 +182,6 @@
   <section class="hero">
     <div class="hero-text">
       <h2>Elegant, Expressive, Eternal</h2>
-      <p>Showcasing creative brilliance through curated visuals and artistic expressions.</p>
     </div>
   </section>
 
@@ -196,9 +195,9 @@
   </section>
 
   <section class="team">
-    <h2>Meet the Creator</h2>
+    <h2>Meet The Team</h2>
     <div class="team-member">
-      <img src="assets/profile.jpg" alt="Portrait of the Creator">
+      <img src="assets/mpic.jpg">
       <p>Johar M. Ashfaque — Visionary behind The Opal Snowdrop</p>
     </div>
   </section>
