--- a/index.html
+++ b/index.html
@@ -137,31 +137,33 @@
 
     .team {
       text-align: center;
-      padding: 2rem;
-      background: #fff;
+      padding: 3rem 2rem;
+      background: linear-gradient(to right, #fefefe, #f9f9f9);
     }
 
     .team h2 {
       font-family: 'Playfair Display', serif;
-      font-size: 2rem;
+      font-size: 2.2rem;
       margin-bottom: 1rem;
     }
 
     .team-member {
-      max-width: 300px;
+      max-width: 320px;
       margin: auto;
+      text-align: center;
     }
 
     .team-member img {
       width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      border-radius: 50%;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
     }
 
     .team-member p {
       margin-top: 1rem;
-      font-size: 1.1rem;
+      font-size: 1.15rem;
       font-weight: 500;
+      color: #444;
     }
   </style>
 </head>
@@ -195,9 +197,9 @@
   </section>
 
   <section class="team">
-    <h2>Meet The Team</h2>
+    <h2>Meet The Creator</h2>
     <div class="team-member">
-      <img src="assets/mpic.jpg">
+      <img src="assets/mpic.jpg" alt="Johar M. Ashfaque">
       <p>Johar M. Ashfaque — Visionary behind The Opal Snowdrop</p>
     </div>
   </section>
