--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   </section>
 
   <section class="team">
-    <h2>Meet The Creator</h2>
+    <h2>Meet The Creators</h2>
     <div class="team-member">
       <img src="assets/mpic.jpg" alt="Johar M. Ashfaque">
       <p>Johar M. Ashfaque — Visionary behind The Opal Snowdrop</p>
