--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <h2>Meet The Creators</h2>
     <div class="team-member">
       <img src="assets/mpic.jpg" alt="Johar M. Ashfaque">
-      <p>Johar M. Ashfaque — Visionary behind The Opal Snowdrop</p>
+      <p>Johar M. Ashfaque</p>
     </div>
   </section>
 
