--- a/index.html
+++ b/index.html
@@ -144,12 +144,18 @@
     .team h2 {
       font-family: 'Playfair Display', serif;
       font-size: 2.2rem;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    .team-members {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 2rem;
     }
 
     .team-member {
-      max-width: 320px;
-      margin: auto;
+      max-width: 280px;
       text-align: center;
     }
 
@@ -198,9 +204,15 @@
 
   <section class="team">
     <h2>Meet The Creators</h2>
-    <div class="team-member">
-      <img src="assets/mpic.jpg" alt="Johar M. Ashfaque">
-      <p>Johar M. Ashfaque</p>
+    <div class="team-members">
+      <div class="team-member">
+        <img src="assets/mpic.jpg" alt="Johar">
+        <p>Johar</p>
+      </div>
+      <div class="team-member">
+        <img src="assets/mpic2.jpg" alt="Ruth">
+        <p>Ruth</p>
+      </div>
     </div>
   </section>
 
