--- a/index.html
+++ b/index.html
@@ -155,12 +155,15 @@
     }
 
     .team-member {
-      max-width: 280px;
+      width: 220px;
+      height: 320px;
       text-align: center;
     }
 
     .team-member img {
-      width: 100%;
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
       border-radius: 50%;
       box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
     }
