--- a/index.html
+++ b/index.html
@@ -55,37 +55,47 @@
 
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 24px;
       padding: 3rem 2rem;
       background: #f9f9f9;
     }
 
     .gallery-item {
+      position: relative;
+      aspect-ratio: 4 / 3;
       overflow: hidden;
-      border-radius: 12px;
+      border-radius: 16px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
       background: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       transition: transform 0.4s ease, box-shadow 0.4s ease;
     }
 
     .gallery-item:hover {
-      transform: scale(1.05);
+      transform: translateY(-4px);
       box-shadow: 0 12px 35px rgba(0, 0, 0, 0.2);
     }
 
     .gallery-item img,
     .gallery-item video {
       width: 100%;
-      height: auto;
-      display: block;
-      border-radius: 12px;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 16px;
+      transition: transform 0.3s ease;
+    }
+
+    .gallery-item:hover img,
+    .gallery-item:hover video {
+      transform: scale(1.03);
     }
 
     .gallery-item video {
       pointer-events: none;
     }
-
     .gallery-item:hover video {
       pointer-events: auto;
     }
@@ -239,12 +249,6 @@
     <div class="gallery-item"><video muted loop><source src="assets/Video9.mp4" type="video/mp4"></video></div>
   </section>
 
-  <div id="modal" class="modal">
-    <span class="close" id="modal-close">&times;</span>
-    <img class="modal-content" id="modal-img" />
-    <div id="caption"></div>
-  </div>
-
   <section id="contact" class="contact-form">
     <h2>Contact Me</h2>
     <form id="contactForm" action="https://formsubmit.co/theopalsnowdrop@gmail.com" method="POST">
@@ -265,7 +269,6 @@
     <p>© 2025 <strong>The Opal Snowdrop</strong> • <a href="mailto:theopalsnowdrop@gmail.com">Contact Me</a></p>
   </footer>
 
-  <script src="script.js"></script>
   <script>
     document.querySelectorAll('video').forEach(video => {
       video.addEventListener('mouseenter', () => video.play());
