--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <div class="gallery-item"><img src="assets/p8.JPG" /></div>
     <div class="gallery-item"><img src="assets/p9.jpg" /></div>
     <div class="gallery-item"><img src="assets/p10.JPG" /></div>
-    <div class="gallery-item"><img src="assets/p12.JPG" /></div>
+    <div class="gallery-item"><img src="assets/p12.jpg" /></div>
   </section>
 
   <section id="videos" class="gallery video-section">
