--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
       <div class="blog-post">
         <h3>Behind the Lens: A Creator’s Journal</h3>
         <p>Peek into our creative process and how we breathe life into each visual. Discover what inspires us daily.</p>
-        <a href="#">Read more →</a>
       </div>
       <div class="blog-post">
-        <h3>The Story of 'Silent Light'</h3>
-        <p>Explore the story behind one of our most viewed works — a tale of light, time, and stillness.</p>
-        <a href="#">Read more →</a>
+        <h3>🌸✨ Big news from The Opal Snowdrop! ✨🌸</h3>
+        <p>Our first-ever business cards have arrived! 💼💖
+It’s a tiny card but a HUGE step for our journey 🌿🕊️
+Thank you for the love & support — more magic on the way! 🌙🪄🌷</p>
       </div>
     </div>
   </section>
@@ -321,6 +321,7 @@
     <div class="gallery-item"><img src="assets/p8.JPG" /></div>
     <div class="gallery-item"><img src="assets/p9.jpg" /></div>
     <div class="gallery-item"><img src="assets/p10.JPG" /></div>
+        <div class="gallery-item"><img src="assets/p13.jpg" /></div>
   </section>
 
   <section id="videos" class="gallery video-section">
