--- a/index.html
+++ b/index.html
@@ -275,8 +275,9 @@
     <h2>Latest News & Stories</h2>
     <div class="blog-posts">
       <div class="blog-post">
-        <h3>Behind the Lens: A Creator’s Journal</h3>
-        <p>Peek into our creative process and how we breathe life into each visual. Discover what inspires us daily.</p>
+        <h3>🕯️🧼 Fresh Supplies In – Let the Magic Begin! 🌿✨</h3>
+        <p>Our new inventory has just arrived, and we're all set to start handcrafting a fresh batch of scented candles, soaps, and more!
+Every ingredient is ready, and creativity is in the air — stay tuned for what’s coming next! 💛</p>
       </div>
       <div class="blog-post">
         <h3>🌸✨ Big news from The Opal Snowdrop! ✨🌸</h3>
