--- a/index.html
+++ b/index.html
@@ -278,12 +278,14 @@
         <h3>🕯️🧼 Fresh Supplies In – Let the Magic Begin! 🌿✨</h3>
         <p>Our new inventory has just arrived, and we're all set to start handcrafting a fresh batch of scented candles, soaps, and more!
 Every ingredient is ready, and creativity is in the air — stay tuned for what’s coming next! 💛</p>
+        <img src="assets/p12"   />
       </div>
       <div class="blog-post">
         <h3>🌸✨ Big news from The Opal Snowdrop! ✨🌸</h3>
         <p>Our first-ever business cards have arrived! 💼💖
 It’s a tiny card but a HUGE step for our journey 🌿🕊️
 Thank you for the love & support — more magic on the way! 🌙🪄🌷</p>
+              <img src="assets/p14"  />
       </div>
     </div>
   </section>
