--- a/index.html
+++ b/index.html
@@ -271,24 +271,25 @@
   </section>
 
   <!-- BLOG SECTION -->
-  <section class="blog-section" id="blog">
-    <h2>Latest News & Stories</h2>
-    <div class="blog-posts">
-      <div class="blog-post">
-        <h3>🕯️🧼 Fresh Supplies In – Let the Magic Begin! 🌿✨</h3>
-        <p>Our new inventory has just arrived, and we're all set to start handcrafting a fresh batch of scented candles, soaps, and more!
-Every ingredient is ready, and creativity is in the air — stay tuned for what’s coming next! 💛</p>
-        <img src="assets/p12.jpg"   />
-      </div>
-      <div class="blog-post">
-        <h3>🌸✨ Big news from The Opal Snowdrop! ✨🌸</h3>
-        <p>Our first-ever business cards have arrived! 💼💖
-It’s a tiny card but a HUGE step for our journey 🌿🕊️
-Thank you for the love & support — more magic on the way! 🌙🪄🌷</p>
-              <img src="assets/p14.jpeg"  />
-      </div>
+<!-- BLOG SECTION -->
+<section class="blog-section" id="blog">
+  <h2>Latest News & Stories</h2>
+  <div class="blog-posts">
+    <div class="blog-post">
+      <h3>🕯️🧼 Fresh Supplies In – Let the Magic Begin! 🌿✨</h3>
+      <p>Our new inventory has just arrived, and we're all set to start handcrafting a fresh batch of scented candles, soaps, and more!
+      Every ingredient is ready, and creativity is in the air — stay tuned for what’s coming next! 💛</p>
+      <img src="assets/p12.jpg" alt="Fresh Supplies" />
     </div>
-  </section>
+    <div class="blog-post">
+      <h3>🌸✨ Big news from The Opal Snowdrop! ✨🌸</h3>
+      <p>Our first-ever business cards have arrived! 💼💖
+      It’s a tiny card but a HUGE step for our journey 🌿🕊️
+      Thank you for the love & support — more magic on the way! 🌙🪄🌷</p>
+      <img src="assets/p14.jpeg" alt="Business Cards" />
+    </div>
+  </div>
+</section>
 
   <section id="about" style="padding: 3rem 2rem; background-color: #fff;">
     <h2 style="text-align: center; font-family: 'Playfair Display', serif; font-size: 2rem; margin-bottom: 1rem;">About Us</h2>
