--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
     <div class="gallery-item"><img src="assets/p9.jpg" /></div>
     <div class="gallery-item"><img src="assets/p10.JPG" /></div>
         <div class="gallery-item"><img src="assets/p13.jpg" /></div>
+    <div class="gallery-item"><img src="assets/p15.jpg" /></div>
   </section>
 
   <section id="videos" class="gallery video-section">
