--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
     <div class="gallery-item"><img src="assets/p10.JPG" /></div>
         <div class="gallery-item"><img src="assets/p13.jpg" /></div>
     <div class="gallery-item"><img src="assets/p15.jpg" /></div>
+        <div class="gallery-item"><img src="assets/p16.jpg" /></div>
   </section>
 
   <section id="videos" class="gallery video-section">
