--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
     <div class="gallery-item"><video muted loop><source src="assets/Video7.mp4" type="video/mp4"></video></div>
     <div class="gallery-item"><video muted loop><source src="assets/Video8.mp4" type="video/mp4"></video></div>
     <div class="gallery-item"><video muted loop><source src="assets/Video9.mp4" type="video/mp4"></video></div>
+        <div class="gallery-item"><video muted loop><source src="assets/Video10.mp4" type="video/mp4"></video></div>
   </section>
 
   <section id="contact" class="contact-form">
