--- a/index.html
+++ b/index.html
@@ -256,12 +256,12 @@
       <img src="assets/logo.jpg" alt="The Opal Snowdrop Logo" class="logo-img" />
       <h1>The Opal Snowdrop</h1>
     </div>
-    <nav>
-      <a href="#blog">Blog</a>
-      <a href="#projects">Gallery</a>
-      <a href="#videos">Videos</a>
-      <a href="#contact">Contact</a>
-    </nav>
+  <nav>
+    <a href="#blog">Blog</a>
+    <a href="#about">About</a>
+    <a href="#booklets">Booklets</a>
+    <a href="#contact">Contact</a>
+  </nav>
   </header>
 
   <section class="hero">
@@ -338,6 +338,29 @@
         <div class="gallery-item"><video muted loop><source src="assets/video10.mp4" type="video/mp4"></video></div>
   </section>
 
+
+
+ <!-- DOWNLOADABLE BOOKLETS SECTION -->
+  <section id="booklets">
+    <h2>Downloadable Booklets</h2>
+    <p>Explore our carefully crafted booklets filled with inspiration and creativity. Download and enjoy!</p>
+    <ul>
+      <li>
+        <a href="assets/Brief_History_and_Philosophy_of_Aromatherapy.pdf" download>📘 Brief History and Philosophy of Aromatherapy (PDF)</a>
+      </li>
+      <li>
+        <a href="assets/Everyday_Uses_and_Rituals_in_Aromatherapy.pdf" download>🌿 Everyday Uses and Rituals in Aromatherapy (PDF)</a>
+      </li>
+      <li>
+        <a href="assets/Scent_and_Emotion_in_Aromatherapy.pdf" download>✨ Scent and Emotion in Aromatherapy(PDF)</a>
+      </li>
+    </ul>
+  </section>
+
+
+
+
+  
   <section id="contact" class="contact-form">
     <h2>Contact Me</h2>
     <form id="contactForm" action="https://formsubmit.co/theopalsnowdrop@gmail.com" method="POST">
