--- a/index.html
+++ b/index.html
@@ -377,9 +377,13 @@
     </p>
   </section>
 
-  <footer>
-    <p>© 2025 <strong>The Opal Snowdrop</strong> • <a href="mailto:theopalsnowdrop@gmail.com">Contact Me</a></p>
-  </footer>
+<footer style="text-align: center; padding: 2rem; background: #fff; font-size: 0.9rem; color: #777;">
+  <p>
+    © 2025 <strong>The Opal Snowdrop</strong><br />
+    📍 Westgate-on-Sea, UK &nbsp;|&nbsp; 📞 <a href="tel:07800963159" style="color: #333; text-decoration: none;">07800 963159</a><br />
+    ✉️ <a href="mailto:theopalsnowdrop@gmail.com" style="color: #333; text-decoration: none;">theopalsnowdrop@gmail.com</a>
+  </p>
+</footer>
 
   <script>
     document.querySelectorAll('video').forEach(video => {
