--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
       <li>
         <a href="assets/Scent_and_Emotion_in_Aromatherapy.pdf" download>✨ Scent and Emotion in Aromatherapy (PDF)</a>
       </li>
+        <li>
+        <a href="assets/Aromatic_Alchemy.pdf" download>✨ Aromatic Alchemy (PDF)</a>
+      </li>
     </ul>
   </section>
 
