--- a/index.html
+++ b/index.html
@@ -288,6 +288,11 @@
       Thank you for the love & support — more magic on the way! 🌙🪄🌷</p>
       <img src="assets/p14.jpeg" alt="Business Cards" />
     </div>
+        <div class="blog-post">
+      <h3>🌸✨ New Collection: Intensity ✨🌸</h3>
+      <p>O  Bold, warm, and unforgettable — Intensity is where passion meets fragrance. A scent that lingers, a mood that speaks.   </p>
+      <img src="assets/p14.jpeg" alt="New Collection" />
+    </div>
   </div>
 </section>
 
