--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <div class="blog-post">
       <h3>🌸✨ New Collection: Intensity ✨🌸</h3>
       <p>O  Bold, warm, and unforgettable — Intensity is where passion meets fragrance. A scent that lingers, a mood that speaks.   </p>
-      <img src="assets/intensity.jpeg" alt="New Collection" />
+      <img src="assets/intensity.jpg" alt="New Collection" />
     </div>
   </div>
 </section>
