--- a/index.html
+++ b/index.html
@@ -293,6 +293,11 @@
       <p>O  Bold, warm, and unforgettable — Intensity is where passion meets fragrance. A scent that lingers, a mood that speaks.   </p>
       <img src="assets/intensity.jpg" alt="New Collection" />
     </div>
+            <div class="blog-post">
+      <h3>🌸✨ New Collection: Pink Peony & Blush Suede ✨🌸</h3>
+      <p>O  A graceful blend of soft blooms and cool suede — where elegance meets depth. Delicate. Velvety. Unforgettable. 🌸🧊   </p>
+      <img src="assets/peonysuede.jpg" alt="New Collection" />
+    </div>
   </div>
 </section>
 
