--- a/index.html
+++ b/index.html
@@ -324,6 +324,19 @@
     </div>
   </section>
 
+
+    <section id="Festive Collection" class="gallery">
+    <div class="gallery-item"><img src="assets/001.jpg" /></div>
+    <div class="gallery-item"><img src="assets/002.jpg" /></div>
+    <div class="gallery-item"><img src="assets/003.jpg" /></div>
+    <div class="gallery-item"><img src="assets/004.jpg" /></div>
+    <div class="gallery-item"><img src="assets/005.jpg" /></div>
+    <div class="gallery-item"><img src="assets/006.jpg" /></div>
+    <div class="gallery-item"><img src="assets/007.JPG" /></div>
+    <div class="gallery-item"><img src="assets/008.JPG" /></div>
+  </section>
+
+  
   <section id="projects" class="gallery">
     <div class="gallery-item"><img src="assets/p1.jpg" /></div>
     <div class="gallery-item"><img src="assets/p2.jpg" /></div>
@@ -405,3 +418,4 @@
   </script>
 </body>
 </html>
+
