--- a/index.html
+++ b/index.html
@@ -276,9 +276,14 @@
   <h2>Latest News & Stories</h2>
   <div class="blog-posts">
     <div class="blog-post">
-      <h3>🕯️🧼 Fresh Supplies In – Let the Magic Begin! 🌿✨</h3>
+      <h3>🕯️🧼 Festive Season Collection Is Here 🌿✨</h3>
       <p>Our new inventory has just arrived, and we're all set to start handcrafting a fresh batch of scented candles, soaps, and more!
       Every ingredient is ready, and creativity is in the air — stay tuned for what’s coming next! 💛</p>
+      <img src="assets/p12.jpg" alt="Fresh Supplies" />
+    </div>
+    <div class="blog-post">
+      <h3>🕯️🧼 Fresh Supplies In – Let the Magic Begin! 🌿✨</h3>
+      <p>It’s that time of year! Our Festive Season Collection just dropped — sparkle your way through the celebrations! 🌟</p>
       <img src="assets/p12.jpg" alt="Fresh Supplies" />
     </div>
     <div class="blog-post">
@@ -332,8 +337,8 @@
     <div class="gallery-item"><img src="assets/004.jpg" /></div>
     <div class="gallery-item"><img src="assets/005.jpg" /></div>
     <div class="gallery-item"><img src="assets/006.jpg" /></div>
-    <div class="gallery-item"><img src="assets/007.JPG" /></div>
-    <div class="gallery-item"><img src="assets/008.JPG" /></div>
+    <div class="gallery-item"><img src="assets/007.jpg" /></div>
+    <div class="gallery-item"><img src="assets/008.jpg" /></div>
   </section>
 
   
@@ -418,4 +423,5 @@
   </script>
 </body>
 </html>
+
 
