--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <h3>🕯️🧼 Festive Season Collection Is Here 🌿✨</h3>
       <p>Our new inventory has just arrived, and we're all set to start handcrafting a fresh batch of scented candles, soaps, and more!
       Every ingredient is ready, and creativity is in the air — stay tuned for what’s coming next! 💛</p>
-      <img src="assets/p12.jpg" alt="Fresh Supplies" />
+      <img src="assets/006.jpg" alt="Fresh Supplies" />
     </div>
     <div class="blog-post">
       <h3>🕯️🧼 Fresh Supplies In – Let the Magic Begin! 🌿✨</h3>
@@ -423,5 +423,6 @@
   </script>
 </body>
 </html>
+
 
 
